--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
     <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="/css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com"/>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
     <link
@@ -46,7 +46,7 @@
   </head>
   <body>
     <div class="left-menu">
-      <img src="./images/avatar.jpg" alt="Profile picture" />
+      <img src="/images/avatar.jpg" alt="Profile picture" />
       <nav>
         <ul>
           <li>
@@ -105,7 +105,7 @@
         </form>
       </div>
     </div>
-    <script src="./js/scripts.js"></script>
+    <script src="/js/scripts.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   </body>
 </html>
